test/tests/stages/14_pointers/invalid_types/compare_pointer_to_ulong.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(ptr)
  =
  const unsigned long(0ul)
  ;
  unsigned
  long
  identifier(ul)
  =
  const unsigned long(0ul)
  ;
  return
  identifier(ptr)
  ==
  identifier(ul)
  ;
  }
